--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,8 @@
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
 
+# Ignore the escript build artifact.
+/speed
+
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
